--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "compass-sass-mixins": "^0.12.7",
+    "actioncable": "^5.2.4-5",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "classnames": "^2.2.6",
+    "compass-sass-mixins": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
