--- a/package.json
+++ b/package.json
@@ -24,13 +24,19 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "test:coverage": "npm run test -- --watchAll=false",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
       "react-app"
     ]
   },
+  "eslintIgnore": [
+    "coverage",
+    "node_modules"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -51,6 +57,7 @@
     "@jackfranklin/test-data-bot": "^1.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.18.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "faker": "^5.2.0",
