--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react-hooks": "^5.0.3",
     "@testing-library/user-event": "^12.1.10",
     "actioncable": "^5.2.4-5",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "compass-sass-mixins": "^0.12.7",
@@ -57,9 +58,9 @@
     "@jackfranklin/test-data-bot": "^1.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.18.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.18.0",
     "faker": "^5.2.0",
     "identity-obj-proxy": "^3.0.0",
     "msw": "^0.26.0",
